# sage-backend

./: LICENSE  README.md  pyproject.toml
backend/: closest_stops.json  dublin_stops.csv  models.py
backend/api/: models.py  serializers.py  test.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_dublinbusroutes_dublinstops_routes_shapes_shpshp.py  0003_favouritelocations_delete_location.py
backend/api/tests/: api_tests.py
backend/backend/: settings.py
backend/seperated_routes/1/:  Shanard Road.csv   Shaw street.csv
backend/seperated_routes/11/:  O'Connell Street.csv   Parnell Square.csv   Sandyford B.D..csv   St Pappin's Rd.csv
backend/seperated_routes/116/:  Parnell Sq.csv   Whitechurch.csv
backend/seperated_routes/118/:  Eden Quay.csv
backend/seperated_routes/120/:  Ashtown Stn.csv   Ballsbridge.csv   Parnell St.csv
backend/seperated_routes/122/:  Ashington.csv   Drimnagh Road.csv   O'Connell Street.csv   Parnell Square.csv
backend/seperated_routes/123/:  Kilnamanagh Rd.csv   Marino.csv   O'Connell Street.csv
backend/seperated_routes/13/:  Grange Castle IAWS.csv   Grange Castle.csv   Harristown.csv
backend/seperated_routes/130/:  Castle Ave.csv   Talbot Street.csv
backend/seperated_routes/14/:  Beaumont.csv   D'Olier Street.csv   Dundrum Luas.csv   Eden Quay.csv
backend/seperated_routes/140/:  IKEA.csv   O'Connell St.csv   Rathmines.csv
backend/seperated_routes/142/:  Coast Road.csv   UCD.csv
backend/seperated_routes/145/:  Bray.csv  (+5 more)
sage/: asgi.py  settings.py  urls.py  wsgi.py
sage_app/: admin.py  tests.py  urls.py
(+229 files in other folders)
